[gd_scene load_steps=11 format=3 uid="uid://by03yh0l1dppx"]

[ext_resource type="Script" path="res://Scripts/Inventory/InventorySlot/inventory_slot_shop.gd" id="1_31lf5"]
[ext_resource type="Shader" path="res://Shaders/inventory_item.gdshader" id="2_grewr"]
[ext_resource type="Shader" path="res://Shaders/CoinDrops.gdshader" id="4_dlx3q"]
[ext_resource type="Texture2D" uid="uid://bb6nwdm3li1v2" path="res://Sprites/Coins/Coin1.png" id="5_4hnfk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jbj6a"]
shader = ExtResource("2_grewr")
shader_parameter/width = 1.0
shader_parameter/outline_color = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wulwn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ov2yb"]
shader = ExtResource("4_dlx3q")
shader_parameter/width = 10.0
shader_parameter/outline_color = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_idv28"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_beocx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqwja"]

[node name="Inventory_Slot_Shop" type="Control"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -1150.0
offset_bottom = -590.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31lf5")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.807843, 0.611765, 0.521569, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.391462, 0.254867, 0.190922, 1)

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
material = SubResource("ShaderMaterial_jbj6a")
position = Vector2(55, 55)

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 0
offset_left = 69.5927
offset_top = 86.9908
offset_right = 109.593
offset_bottom = 109.991
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_wulwn")

[node name="DetailPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -99.0
offset_right = 200.0
offset_bottom = -1.0
color = Color(0.807843, 0.611765, 0.521569, 1)

[node name="ItemName" type="Label" parent="DetailPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Name"

[node name="ItemType" type="Label" parent="DetailPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -26.5
offset_right = 71.0
offset_bottom = -3.5
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "type"

[node name="ItemEffect" type="Label" parent="DetailPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -51.0
offset_right = 104.0
offset_bottom = -28.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "effect"

[node name="CoinImg" type="TextureRect" parent="DetailPanel"]
material = SubResource("ShaderMaterial_ov2yb")
layout_mode = 0
offset_left = -9.0
offset_top = 59.0
offset_right = 38.0
offset_bottom = 106.0
texture = ExtResource("5_4hnfk")
expand_mode = 1

[node name="Cost" type="Label" parent="DetailPanel/CoinImg"]
layout_mode = 1
offset_left = 40.0
offset_top = 14.0
offset_right = 110.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Cost"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -5.0
offset_top = 38.0
offset_right = 125.0
offset_bottom = 66.0
color = Color(0.807843, 0.611765, 0.521569, 1)

[node name="BuyButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -15.0
offset_right = 60.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_idv28")
text = "Buy"

[node name="QuantityPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -5.0
offset_top = 67.0
offset_right = 125.0
offset_bottom = 126.0
color = Color(0.807843, 0.611765, 0.521569, 1)

[node name="HSlider" type="HSlider" parent="QuantityPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="HowMany" type="Label" parent="QuantityPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_top = 4.0
offset_right = 62.5
offset_bottom = 27.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "How many?"

[node name="Quantity" type="Label" parent="QuantityPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -26.0
offset_right = 7.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 10
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmButton" type="Button" parent="QuantityPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -20.0
offset_right = 59.0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_beocx")
text = "Confirm"

[node name="CancelButton" type="Button" parent="QuantityPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -20.0
offset_right = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_cqwja")
text = "Cancel"

[connection signal="gui_input" from="ItemButton" to="." method="_on_item_button_gui_input"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="mouse_entered" from="UsagePanel/BuyButton" to="." method="_on_buy_button_mouse_entered"]
[connection signal="pressed" from="UsagePanel/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="value_changed" from="QuantityPanel/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="mouse_entered" from="QuantityPanel/ConfirmButton" to="." method="_on_confirm_button_mouse_entered"]
[connection signal="pressed" from="QuantityPanel/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="mouse_entered" from="QuantityPanel/CancelButton" to="." method="_on_cancel_button_mouse_entered"]
[connection signal="pressed" from="QuantityPanel/CancelButton" to="." method="_on_cancel_button_pressed"]
